// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsPage > renders page 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__ css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage > renders page with authors profile section when user has author profile 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__ css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Author email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <p>
                  Change the email addresses registered on your author profile. These are used by other INSPIRE users to contact you and for the automatic matching of your papers.
                </p>
                <a
                  class="db pb3"
                  data-test-id="author-form"
                  href="/submissions/authors/1234567"
                >
                  Update author information
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage > renders page with error 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-alert ant-alert-error css-dev-only-do-not-override-mncuj7"
        data-show="true"
        role="alert"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            Error occured
          </div>
        </div>
        <button
          class="ant-alert-close-icon"
          tabindex="0"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mv3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__ css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage > renders page with orcid section when user has orcid profile 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-card ant-card-bordered css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__ css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input css-dev-only-do-not-override-mncuj7 ant-input-outlined"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Author email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <p>
                  Change the email addresses registered on your author profile. These are used by other INSPIRE users to contact you and for the automatic matching of your papers.
                </p>
                <a
                  class="db pb3"
                  data-test-id="author-form"
                  href="/submissions/authors/1234567"
                >
                  Update author information
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
          data-test-id="orcid"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="expanded"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6 mv0"
              >
                Orcid settings
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <div
                  class="mb3"
                >
                  <span
                    class="mr2"
                  >
                    Export your INSPIRE works to ORCID
                  </span>
                  <button
                    aria-checked="false"
                    aria-describedby="test-id"
                    class="ant-switch css-dev-only-do-not-override-mncuj7"
                    data-test-id="orcid-switch"
                    data-testid="orcid-switch"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
                <div>
                  <div
                    data-testid="orcid-push-setting-message"
                  >
                    <p>
                      Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
